Add LPS33 Barometric pressure sensor

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -92,6 +92,10 @@ lib_deps =
 # 	; https://github.com/adafruit/Adafruit_MPL3115A2_Library
     https://github.com/adafruit/Adafruit_MPL3115A2_Library#1.2.4
 
+#   ; Adafruit LPS35HW Library
+#   ; https://github.com/adafruit/Adafruit_MPL3115A2_Library
+    https://github.com/adafruit/Adafruit_LPS35HW#1.0.5
+
 # 	; I2C Soil Moisture Sensor (chirp) -> TODO update fork
 # 	; https://github.com/Apollon77/I2CSoilMoistureSensor (forked from)
 	https://github.com/fablabbcn/I2CSoilMoistureSensor#2165973
