ifdef disable CCS811 and comment on fix compiling

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -56,7 +56,8 @@ lib_deps =
 
 # 	; Sparkfun CCS811 -> id 1626
 # 	; https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library
-    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v2.0.1
+#   ; FIX: Adding #include <Arduino.h> to SparkFunCCS811.h fixes the compile problem
+    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v2.0.3
 
 # 	; SparkFun I2C GPS Reading and Control -> id 1652 (For XA1110 Sparkfun i2c GPS)
 # 	; https://github.com/sparkfun/SparkFun_I2C_GPS_Arduino_Library
