--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -11,15 +11,13 @@
 [platformio]
 core_dir = .platformio
 
-[env:sck2]
-build_flags = !sh ../tools/git-rev.sh
+[env]
 platform = atmelsam@8.1.0
 platform_packages = framework-arduino-samd@1.8.13
 board = sck2
 framework = arduino
 lib_extra_dirs = ../lib
 extra_scripts = uploadSAM.py
-
 lib_deps =
 
 #	; SPIMemory (former SPIFlash)
@@ -127,3 +125,23 @@ lib_deps =
 #   ; Sensirion I2C SFA3X Arduino library
 #   ; https://github.com/Sensirion/arduino-i2c-sfa3x
     https://github.com/Sensirion/arduino-i2c-sfa3x
+
+[env:sck2]
+build_flags =
+    !sh ../tools/git-rev.sh
+    -D SCK2
+
+[env:sck21_air]
+build_flags =
+    !sh ../tools/git-rev.sh
+    -D SCK21_AIR
+
+[env:sck22_air]
+build_flags =
+    !sh ../tools/git-rev.sh
+    -D SCK22_AIR
+
+[env:sck_water]
+build_flags =
+    !sh ../tools/git-rev.sh
+    -D SCK_WATER
