--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,12 @@ on:
 jobs:
   build:
     name: Run Tests
-    # runs-on: "${{ matrix.os }}"
-    runs-on: "ubuntu-latest"
-    # strategy:
-    #   fail-fast: true
-      # matrix:
-        # os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+    runs-on: "${{ matrix.os }}"
+    # runs-on: "ubuntu-latest"
+    strategy:
+      fail-fast: true
+      matrix:
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         # python-version: ["3.7", "3.8", "3.9"]
 
     steps:
