Sensirion libs are now fixed to last version

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -15,6 +15,7 @@ core_dir = .platformio
 platform = atmelsam@8.1.0
 platform_packages = framework-arduino-samd@1.8.13
 board = sck2
+build_flags = -Ilib -Isrc
 framework = arduino
 lib_extra_dirs = ../lib
 extra_scripts = uploadSAM.py
@@ -120,11 +121,11 @@ lib_deps =
 
 #   ; Sensirion SPS30 library
 #   ; https://github.com/Sensirion/arduino-sps/
-    https://github.com/Sensirion/arduino-sps/
+    https://github.com/Sensirion/arduino-sps#v1.1.2
 
 #   ; Sensirion I2C SFA3X Arduino library
 #   ; https://github.com/Sensirion/arduino-i2c-sfa3x
-    https://github.com/Sensirion/arduino-i2c-sfa3x
+    https://github.com/Sensirion/arduino-i2c-sfa3x#0.1.0
 
 [env:sck2]
 build_flags =
