Add option for compiling to .hex

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -18,7 +18,9 @@ board = sck2
 build_flags = -Ilib -Isrc
 framework = arduino
 lib_extra_dirs = ../lib
-extra_scripts = uploadSAM.py
+extra_scripts =
+    uploadSAM.py
+    post:convert_hex.py
 lib_deps =
 
 #	; SPIMemory (former SPIFlash)
