Add env for test firmware. Change define

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -148,3 +148,9 @@ build_flags =
 build_flags =
     !sh ../tools/git-rev.sh
     -D SCK_WATER
+
+[env:sck22_air_test]
+build_flags =
+    !sh ../tools/git-rev.sh
+    -D SCK22_AIR
+    -D TESTING
