--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -144,6 +144,11 @@ build_flags =
     !sh ../tools/git-rev.sh
     -D SCK22_AIR
 
+[env:sck23_air]
+build_flags =
+    !sh ../tools/git-rev.sh
+    -D SCK23_AIR
+
 [env:sck_water]
 build_flags =
     !sh ../tools/git-rev.sh
