--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -131,31 +131,31 @@ lib_deps =
 
 [env:sck2]
 build_flags =
-    !sh ../tools/git-rev.sh
+    !sh ../tools/git-rev.sh -e sck2
     -D SCK2
 
 [env:sck21_air]
 build_flags =
-    !sh ../tools/git-rev.sh
+    !sh ../tools/git-rev.sh -e sck21_air
     -D SCK21_AIR
 
 [env:sck22_air]
 build_flags =
-    !sh ../tools/git-rev.sh
+    !sh ../tools/git-rev.sh -e sck22_air
     -D SCK22_AIR
 
 [env:sck23_air]
 build_flags =
-    !sh ../tools/git-rev.sh
+    !sh ../tools/git-rev.sh -e sck23_air
     -D SCK23_AIR
 
 [env:sck_water]
 build_flags =
-    !sh ../tools/git-rev.sh
+    !sh ../tools/git-rev.sh -e sck_water
     -D SCK_WATER
 
 [env:sck23_air_test]
 build_flags =
-    !sh ../tools/git-rev.sh
+    !sh ../tools/git-rev.sh -e sck23_air_test
     -D SCK23_AIR
     -D TESTING
