Remove ADS1X15 fork
Remove the fork as adafruit has refurbished it and we do not need a fork for this anymore. They can now pass a Wire object to the begin.

--- a/sam/platformio.ini
+++ b/sam/platformio.ini
@@ -76,8 +76,7 @@ lib_deps =
 	https://github.com/ivanseidel/LinkedList#dac3874
 
 # 	; Adafruit ADS1X15 ADC
-# 	; https://github.com/adafruit/Adafruit_ADS1X15 (forked from)
-	https://github.com/fablabbcn/Adafruit_ADS1X15#939f4eb
+	https://github.com/adafruit/Adafruit_ADS1X15@2.5.0
 
 # 	; ArduinoZero-PMUX-report
 	https://github.com/WestfW/ArduinoZero-PMUX-report#da72d53
@@ -148,6 +147,7 @@ build_flags =
 build_flags =
     !sh ../tools/git-rev.sh -e sck23_air
     -D SCK23_AIR
+    -D WITH_SENSOR_GROVE_OLED
 
 [env:sck_water]
 build_flags =
