--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,12 +75,26 @@ jobs:
       - name: Build clang checks Docker image
         run: docker build -t daphi-clang-checks guidelines_checks
 
-      - name: Run clang-format (auto-format files)
+      - name: Get changed files
+        id: changed
         run: |
-          docker run --rm -v "$PWD":/workspace -w /workspace daphi-clang-checks \
-            sh -c 'clang-format -i $(find esp/src -type f \( -name "*.cpp" -o -name "*.h" -o -name "*.ino" \))'
+          git fetch origin ${{ github.base_ref }}
+          git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E '^esp/src/.*\.(cpp|h|ino)$' > changed-files.txt || true
 
-      - name: Run clang-tidy checks
+      - name: Run clang-format (auto-format changed files)
         run: |
-          docker run --rm -v "$PWD":/workspace -w /workspace daphi-clang-checks \
-            sh /workspace/guidelines_checks/run-clang-checks.sh
+          if [ -s changed-files.txt ]; then
+            docker run --rm -v "$PWD":/workspace -w /workspace daphi-clang-checks \
+              sh -c 'clang-format -i $(cat changed-files.txt)'
+          else
+            echo "No changed source files to format."
+          fi
+              
+      - name: Run clang-tidy checks on changed files
+        run: |
+          if [ -s changed-files.txt ]; then
+            docker run --rm -v "$PWD":/workspace -w /workspace daphi-clang-checks \
+              sh /workspace/guidelines_checks/run-clang-checks.sh $(cat changed-files.txt)
+          else
+            echo "No changed source files to check."
+          fi
